--- a/src/main/java/qa/windows/Excel.form
+++ b/src/main/java/qa/windows/Excel.form
@@ -108,7 +108,9 @@
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <text value=""/>
+        </properties>
       </component>
       <component id="4e02c" class="javax.swing.JButton" binding="openCTButton">
         <constraints>
@@ -157,7 +159,9 @@
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <text value=""/>
+        </properties>
       </component>
       <component id="45f00" class="javax.swing.JButton" binding="openINTButton">
         <constraints>
@@ -181,7 +185,7 @@
         </constraints>
         <properties>
           <foreground color="-1"/>
-          <text value="V1.5.2"/>
+          <text value="V1.6"/>
         </properties>
       </component>
       <vspacer id="8c242">
